--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.4.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
